<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    android:paddingLeft="0dp" >

    <ImageButton
        android:id="@+id/btnprojetos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/projetosico"
        android:src="@drawable/projetosico" />

    <ImageButton
        android:id="@+id/btnempresas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnprojetos"
        android:layout_below="@+id/btnprojetos"
        android:src="@drawable/empresasico" android:contentDescription="@string/empresasico"/>

    <ImageButton
        android:id="@+id/btnagenda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnempresas"
        android:layout_centerHorizontal="true"
        android:src="@drawable/agendaico" android:contentDescription="@string/agendaico"/>

    <ImageButton
        android:id="@+id/btnconsultores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btnprojetos"
        android:layout_toRightOf="@+id/btnprojetos"
        android:contentDescription="@string/consultoresico"
        android:src="@drawable/consultoresico" />

    <ImageButton
        android:id="@+id/btnapontamentos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnagenda"
        android:layout_margin="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:layout_toRightOf="@+id/btnempresas"
        android:contentDescription="@string/apontamentosico"
        android:src="@drawable/apontamentosico" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnconsultores"
        android:layout_alignRight="@+id/btnagenda"
        android:layout_marginBottom="20dp"
        android:src="@drawable/logo" android:contentDescription="@string/logo"/>

</RelativeLayout>
